Added app router changes and authentication changes

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "analyze:browser": "cross-env BUNDLE_ANALYZE=browser next build"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.1",
     "next": "14.1.0",
